GSLT/src/test/module/bad/BadFreeVar.module
Module BadFreeVar {
  Theory Bad() {
    Nil
      Exports {
        Term;
      }
      Terms {
        Foo . Term ::= "Foo" "Charlie";
        Bar . Term ::= "Bar" "Foxtrot";
      }
      Rewrites {
        Baz: (Foo x) ~> (Bar y);
      }
  }
}
